--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
+numpy==1.24.2
+scikit-learn==0.22.2.post1
 Flask==1.1.4
 Werkzeug==1.0.1
 MarkupSafe==2.0.1
-numpy==1.24.2
-scikit-learn==0.22.2.post1
+Jinja2==2.11.3
+itsdangerous==1.1.0
+click==7.1.2
+scipy==1.13.1
+joblib==1.4.2
