--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,19 +34,19 @@ jobs:
       run: docker build . --file Dockerfile --tag chelamkurids139/liver_disease_predictor
     - name: Push the Docker image
       run: docker push chelamkurids139/liver_disease_predictor
-    - name: Run Docker container
-      run: docker run -d -p 5000:5000 chelamkurids139/liver_disease_predictor
-          # Wait for the application to be ready, optional but can be added
+    # - name: Run Docker container
+    #   run: docker run -d -p 5000:5000 chelamkurids139/liver_disease_predictor
+    #       # Wait for the application to be ready, optional but can be added
            
-           # sleep 30
+    #        # sleep 30
           
-      # Verify if the container is running
-    - name: Check if the container is running
-      run: docker ps
-    - name: Extract container ID
-      id: extract_id
-      run: echo "CONTAINER_ID=$(docker ps -q -f "name=chelamkurids139/liver_disease_predictor")" >> $GITHUB_ENV
-           echo "Container ID is:$CONTAINER_ID" 
+    #   # Verify if the container is running
+    # - name: Check if the container is running
+    #   run: docker ps
+    # - name: Extract container ID
+    #   id: extract_id
+    #   run: echo "CONTAINER_ID=$(docker ps -q -f "name=chelamkurids139/liver_disease_predictor")" >> $GITHUB_ENV
+    #        echo "Container ID is:$CONTAINER_ID" 
     
-    - name: Display Docker container logs
-      run: docker logs $CONTAINER_ID
+    # - name: Display Docker container logs
+    #   run: docker logs $CONTAINER_ID
